src/test/run-pass/issue-6141-leaking-owned-fn.rs
fn run(f: &fn()) {
    f()
}

pub fn main() {
    let f: ~fn() = || ();
    run(f);
}
